--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 class="header">Hello World</h1>
 </body>
 </html>
